# robot_visualization

./: .gitmodules  README.md
backend/: CMakeLists.txt
backend/include/: helpers.hpp  robot_arm.hpp  robot_link.hpp  websocket_server.hpp
backend/src/: main.cpp  robot.hpp  robot_arm.cpp  robot_link.cpp  websocket_server.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  main_links.ts  style.css
testing/: test_controller.py  test_ws.py
